--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><iframe class="embed-responsive iframe" width="560" height="350" frameBorder="0" src="https://www.youtube.com/watch?v=nZYVjXAkra4" alt="" /> <!--class="img-fluid"--></iframe> </div>
+                    <div class="col-lg-6"><iframe class="embed-responsive iframe" width="560" height="350" frameBorder="0" src="https://www.youtube.com/embed/Y2sYFnT-HSU" alt="" /> <!--class="img-fluid"--></iframe> </div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -99,7 +99,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><iframe class="embed-responsive iframe" width="560" height="350" frameBorder="0" src="https://www.youtube.com/watch?v=Y2sYFnT-HSU" alt="" /> <!--class="img-fluid"--></iframe> </div>
+                    <div class="col-lg-6"><iframe class="embed-responsive iframe" width="560" height="350" frameBorder="0" src="https://www.youtube.com/embed/nZYVjXAkra4" alt="" /> <!--class="img-fluid"--></iframe> </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
